k8s/api-gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8099
      targetPort: 8099
  type: ClusterIP
